[package]
name = "composer_lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
features = { version = "0.10.0"}
futures = "0.3.21"
log = "0.4.17"
reqwest = { version = "0.11.11", features = ["json"]}
serde = "1.0.137"
serde_json = "1.0.81"
simple-logging = "2.0.2"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = "0.17.0"
url = "2.2.2"
