[package]
name = "composer_lsp"
version = "0.1.0"
edition = "2021"
authors = ["nkoporec <me@nkoporec.com>"]
description = "A LSP server for composer"
readme = "README.md"
repository = "https://github.com/nkoporec/composer_lsp/"
license = "MIT"
license-file = "LICENSE.txt"
keywords = ["lsp", "composer", "php", "json"]
categories = ["command-line-utilities", "development-tools", "parser-implementations"]

[dependencies]
features = { version = "0.10.0"}
futures = "0.3.21"
log = "0.4.17"
reqwest = { version = "0.11.11", features = ["json"]}
semver = "1.0.14"
serde = "1.0.137"
serde_json = "1.0.81"
log4rs = "1.2.0"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = "0.17.0"
url = "2.2.2"
